# etterna-elo-ranking

./: .gitignore  README.md  pyproject.toml
output/: chart_elo_diff.csv  chart_elo_diff.md  elo_dtw_ord_peak_skillsets.csv  elo_dtw_ord_peak_skillsets.md  elo_dtw_ord_skillsets.csv  elo_dtw_ord_skillsets.md
scripts/: elo_core.py  explore_params.ipynb  inspect_tau_weights.py  run_chart_elo_est.py  run_elo.py  run_elo_eval_params.py  run_elo_tune_params.py  scrapper.py
