[project]
name = "elo-etterna-ranking"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
